# Copyright 2021 The Cobalt Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("dom_parser") {
  has_pedantic_warnings = true

  sources = [
    "html_decoder.cc",
    "html_decoder.h",
    "libxml_html_parser_wrapper.cc",
    "libxml_html_parser_wrapper.h",
    "libxml_parser_wrapper.cc",
    "libxml_parser_wrapper.h",
    "libxml_xml_parser_wrapper.cc",
    "libxml_xml_parser_wrapper.h",
    "parser.cc",
    "parser.h",
    "xml_decoder.cc",
    "xml_decoder.h",
  ]

  deps = [
    "//cobalt/base",
    "//cobalt/csp",
    "//cobalt/dom",
    "//cobalt/loader",
    "//net",
    "//third_party/libxml",
    "//third_party/protobuf:protobuf_lite",
  ]
}

target(gtest_target_type, "dom_parser_test") {
  testonly = true
  has_pedantic_warnings = true

  sources = [
    "html_decoder_test.cc",
    "xml_decoder_test.cc",
  ]

  deps = [
    ":dom_parser",
    "//cobalt/dom",
    "//cobalt/dom/testing:dom_testing",
    "//cobalt/loader",
    "//cobalt/test:run_all_unittests",
    "//testing/gmock",
    "//testing/gtest",
  ]
}
