# Copyright 2021 The Cobalt Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("text_encoding") {
  has_pedantic_warnings = true

  sources = [
    "text_decoder.cc",
    "text_decoder.h",
    "text_encoder.cc",
    "text_encoder.h",
  ]

  deps = [
    "//cobalt/base",
    "//cobalt/browser:generated_types",
    "//cobalt/dom",
    "//cobalt/script",
    "//third_party/icu:icuuc",
  ]
}

target(gtest_target_type, "text_encoding_test") {
  testonly = true
  has_pedantic_warnings = true

  sources = [
    "text_decoder_test.cc",
    "text_encoder_test.cc",
  ]

  deps = [
    ":text_encoding",
    "//cobalt/base",
    "//cobalt/browser:generated_bindings",
    "//cobalt/debug",
    "//cobalt/dom/testing:dom_testing",
    "//cobalt/script",
    "//cobalt/test:run_all_unittests",
    "//testing/gmock",
    "//testing/gtest",
  ]

  data_deps = [ "//third_party/icu:icudata" ]
}
