# Copyright 2021 The Cobalt Authors. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("input") {
  sources = [
    "camera_3d.h",
    "create_default_camera_3d.h",
    "input_device_manager.h",
    "input_device_manager_desktop.cc",
    "input_device_manager_desktop.h",
    "input_device_manager_fuzzer.cc",
    "input_device_manager_fuzzer.h",
    "input_device_manager_starboard.cc",
    "input_poller.h",
    "input_poller_impl.cc",
    "input_poller_impl.h",
    "key_event_handler.cc",
    "key_event_handler.h",
    "key_repeat_filter.cc",
    "key_repeat_filter.h",
    "keypress_generator_filter.cc",
    "keypress_generator_filter.h",
  ]

  if (enable_vr) {
    sources += [
      "private/camera_3d_vr.cc",
      "private/camera_3d_vr.h",
    ]
  } else {
    sources += [
      "camera_3d_input_poller.cc",
      "camera_3d_input_poller.h",
    ]
  }

  deps = [
    "//cobalt/base",
    "//cobalt/dom",
    "//cobalt/overlay_info",
    "//cobalt/speech",
    "//cobalt/system_window",
    "//starboard",
  ]
}
